--- a/KnowItAll/CreateNewPost.storyboard
+++ b/KnowItAll/CreateNewPost.storyboard
@@ -447,7 +447,7 @@
                                     <constraint firstAttribute="width" constant="120" id="D6p-Fh-BTC"/>
                                     <constraint firstAttribute="height" constant="30" id="DhE-5e-AIb"/>
                                 </constraints>
-                                <state key="normal" title="Anonymous?">
+                                <state key="normal" title="Anonymous">
                                     <color key="titleColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
